testutil/src/snapshots/testutil__transition_case_T19.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature is now unmanaged by GHerrit.
