testutil/src/snapshots/testutil__transition_case_T22.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch feature.
[gherrit] [WARN] The current git configuration does not match the expected state for a public branch.
[gherrit] [WARN]   - pushRemote: current='drifted-remote', expected='origin'
[gherrit] [WARN] Use --force to overwrite manual changes.
