testutil/src/snapshots/testutil__unmanage_cleanup.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-cleanup is now unmanaged by GHerrit.
